@@ -11,3 +11,5 @@
 - Parts are now zoomed to fit properly
 - Added ability to snap to pre-existing vertices while drawing.
 - Replace coords: allow replacing all coords regardless of original value, plus relative moving (offset)
+- When drawing, drawn vertices now display coordinate labels.
+- Calculated coordinates are now rounded down (to prevent stuff like Z:160.000001)
